services/telemetry/home-exporters/goodwe-prometheus-exporter/goodwe-prometheus-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goodwe-prometheus-exporter
  namespace: home-exporters
  labels:
    app: goodwe-prometheus-exporter
    app.kubernetes.io/name: goodwe-prometheus-exporter
spec:
  type: ClusterIP
  selector:
    app: goodwe-prometheus-exporter
    app.kubernetes.io/name: goodwe-prometheus-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: metrics
