services/telemetry/home-exporters/goodwe-prometheus-exporter/goodwe-prometheus-exporter-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: goodwe-prometheus-exporter
  namespace: home-exporters
spec:
  podSelector:
    matchLabels:
      app: goodwe-prometheus-exporter
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: observability
      ports:
        - protocol: TCP
          port: 9100
  egress:
    - to:
        - ipBlock:
            cidr: ${GOODWE_INVERTER_CIDR}
      ports:
        - protocol: UDP
          port: 8899
